# agentic-framework

./: .gitignore  CHANGELOG.md  FINAL_STRUCTURE.md  GITHUB_PUBLISHED.md  INSTALL.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  dev-requirements.txt  master-agent.md  project-brief-template.md  pyproject.toml  requirements.txt  setup.py
.github/chatmodes/: Master Agent.md
agentic-enhancements/: CONTRIBUTION_SUMMARY.md
agentic-enhancements/domain-expert-integration/: domain-expert-integration-protocol.md
agentic-enhancements/dual-validation-framework/: dual-validation-framework.md
agentic-enhancements/enhanced-business-analyst/: enhanced-business-analyst-agent.md
agentic_framework/: __init__.py  __main__.py  cli.py  commands.py  core.py  master_agent.py  project.py
agentic_framework/scripts/: __init__.py  create_project.py  new_project.py
agentic_framework/templates/: __init__.py
agentic_framework/templates/.github/: copilot-instructions.md
scripts/: agent_integration.py  framework_manager.py  new_project.py
wiki-content/: CLI-Reference.md  Development-Standards.md  Getting-Started.md  Home.md  Project-Types.md  README.md  Release-Notes.md
