[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-framework"
version = "0.1.0"
description = "A production-ready Human-in-the-Loop (HITL) software development lifecycle framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agentic Framework Team", email = "info@agentic-framework.dev"}
]
maintainers = [
    {name = "Agentic Framework Team", email = "info@agentic-framework.dev"}
]
keywords = [
    "ai", "agents", "sdlc", "framework", "automation", "hitl", "development",
    "project-management", "workflow", "orchestration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "pathlib",
    "typing-extensions>=3.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/LinoGoncalves/agentic-framework"
Documentation = "https://github.com/LinoGoncalves/agentic-framework#readme"
Repository = "https://github.com/LinoGoncalves/agentic-framework.git"
Issues = "https://github.com/LinoGoncalves/agentic-framework/issues"

[project.scripts]
agentic-framework = "agentic_framework.cli:main"
agentic-new = "agentic_framework.project:main"

[tool.setuptools]
packages = ["agentic_framework", "agentic_framework.development_standards", "agentic_framework.sub_agents", "agentic_framework.scripts"]
include-package-data = true

[tool.setuptools.package-data]
agentic_framework = [
    "sub_agents/*.md",
    "development_standards/*.md", 
    "development_standards/*.json",
    "scripts/*.py"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]